Closed Bug 235921 Opened 22 years ago Closed 22 years ago

more than 2 RunApps hangs installer parser

Categories

(SeaMonkey :: Installer, defect)

All
Linux
defect
Not set
critical

Tracking

(Not tracked)

RESOLVED FIXED

People

(Reporter: ajschult784, Assigned: ajschult784)

Details

(Keywords: hang)

Attachments

(1 file)

If there are 3 or more applications listed to run on installer completion, the installer hangs trying to parse them.
Attached patch patchSplinter Review
Assignee: general → ajschult
Status: NEW → ASSIGNED
Attachment #142507 - Flags: superreview?(dveditz+bmo)
Attachment #142507 - Flags: review?(bsmedberg)
Attachment #142507 - Flags: review?(bsmedberg) → review+
Comment on attachment 142507 [details] [diff] [review] patch sr=dveditz
Attachment #142507 - Flags: superreview?(dveditz+bmo) → superreview+
Comment on attachment 142507 [details] [diff] [review] patch this simple patch fixes an installer hang, but not one that actually affects seamonkey.
Attachment #142507 - Flags: approval1.7b?
Comment on attachment 142507 [details] [diff] [review] patch a=chofmann for 1.7 -- wait until later today to check-in. thx
Attachment #142507 - Flags: approval1.7b? → approval1.7+
fix checked in by Neil.
Status: ASSIGNED → RESOLVED
Closed: 22 years ago
Resolution: --- → FIXED
Product: Browser → Seamonkey
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: