Bug 235921 Installer hangs if there are more than two apps to run p=ajschult r=bsmedberg sr=dveditz a=chofmann